--- a/app/assets/stylesheets/color.sass
+++ b/app/assets/stylesheets/color.sass
@@ -47,81 +47,105 @@ $alert-color: $color-orange-1
 
 // COLOR AID CLASSES:
 
-.color-bar
-  height: 100px
-  width: 100%
-  clear: both
+#color-palette
+  margin: 110px 5% 80px 5%
+  padding: 20px 40px
+  background: white
+  border: 1px solid #ddd
 
-.color-block
-  float: left
-  width: 10%
-  height: 100%
-  margin: 2%
+  #page-title
+    margin-top: 8px
+    font-weight: normal
+    font-size: 32px
+    color: #333
 
-.color-blue-00
-  background-color: $color-blue-00
-.color-blue-0
-  background-color: $color-blue-0
-.color-blue-1
-  background-color: $color-blue-1
-.color-blue-2
-  background-color: $color-blue-2
-.color-blue-3
-  background-color: $color-blue-3
-.color-blue-4
-  background-color: $color-blue-4
-.color-blue-5
-  background-color: $color-blue-5
+  .color-group
+    margin-bottom: 40px
+    padding-bottom: 50px
+    clear: both
 
-.color-alt-blue-0
-  background-color: $color-alt-blue-0
-.color-alt-blue-1
-  background-color: $color-alt-blue-1
-.color-alt-blue-2
-  background-color: $color-alt-blue-2
-.color-alt-blue-3
-  background-color: $color-alt-blue-3
-  border: 1px solid white
+  .group-title
+    font-size: 18px
+    font-weight: normal
+    color: #555
+    margin-bottom: 0
+    padding-bottom: 0
 
-.color-green-0
-  background-color:  $color-green-0
-.color-green-1
-  background-color:  $color-green-1
-.color-green-2
-  background-color:  $color-green-2
-.color-green-3
-  background-color:  $color-green-3
-.color-green-5
-  background-color:  $color-green-5
+  .color-bar
+    width: 100%
+    clear: both
 
-.color-red-1
-  background-color: $color-red-1
-.color-red-2
-  background-color: $color-red-2
+  .color-block
+    float: left
+    width: 120px
+    height: 90px
+    margin: 10px 2%
+    border: 2px solid #bbb
 
-.color-orange-1
-  background-color: $color-orange-1
-.color-orange-2
-  background-color: $color-orange-2
-.color-orange-3
-  background-color: $color-orange-3
+  .color-blue-00
+    background-color: $color-blue-00
+  .color-blue-0
+    background-color: $color-blue-0
+  .color-blue-1
+    background-color: $color-blue-1
+  .color-blue-2
+    background-color: $color-blue-2
+  .color-blue-3
+    background-color: $color-blue-3
+  .color-blue-4
+    background-color: $color-blue-4
+  .color-blue-5
+    background-color: $color-blue-5
 
-.color-yellow-1
-  background-color: $color-yellow-1
-.color-yellow-2
-  background-color: $color-yellow-2
+  .color-alt-blue-0
+    background-color: $color-alt-blue-0
+  .color-alt-blue-1
+    background-color: $color-alt-blue-1
+  .color-alt-blue-2
+    background-color: $color-alt-blue-2
+  .color-alt-blue-3
+    background-color: $color-alt-blue-3
+    border: 1px solid white
 
-.color-grey-00
-  background-color: $color-grey-00
-.color-grey-0
-  background-color: $color-grey-0
-.color-grey-1
-  background-color: $color-grey-1
-.color-grey-2
-  background-color: $color-grey-2
-.color-grey-3
-  background-color: $color-grey-3
-.color-grey-4
-  background-color: $color-grey-4
-.color-grey-5
-  background-color: $color-grey-5
+  .color-green-0
+    background-color:  $color-green-0
+  .color-green-1
+    background-color:  $color-green-1
+  .color-green-2
+    background-color:  $color-green-2
+  .color-green-3
+    background-color:  $color-green-3
+  .color-green-5
+    background-color:  $color-green-5
+
+  .color-red-1
+    background-color: $color-red-1
+  .color-red-2
+    background-color: $color-red-2
+
+  .color-orange-1
+    background-color: $color-orange-1
+  .color-orange-2
+    background-color: $color-orange-2
+  .color-orange-3
+    background-color: $color-orange-3
+
+  .color-yellow-1
+    background-color: $color-yellow-1
+  .color-yellow-2
+    background-color: $color-yellow-2
+
+  .color-grey-00
+    background-color: $color-grey-00
+  .color-grey-0
+    background-color: $color-grey-0
+  .color-grey-1
+    background-color: $color-grey-1
+  .color-grey-2
+    background-color: $color-grey-2
+  .color-grey-3
+    background-color: $color-grey-3
+  .color-grey-4
+    background-color: $color-grey-4
+  .color-grey-5
+    background-color: $color-grey-5
