--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -55,7 +55,139 @@ button#remove-badges, button#add-badges
   @include transition-duration(0.3s)
   @include transition-timing-function(ease)
 
-.grade-badge, .badge-table
+.grade-badge
+  float: left
+  position: relative
+  width: 5rem
+  margin: 0 3rem 3rem 2rem
+
+  &.hexagon
+    cursor: pointer
+    cursor: hand
+
+  img
+    width: 80px
+
+  &.unearned 
+    @include opacity(0.8)
+
+  &.unearned:hover, &.unearned:before:hover, &.unearned:after:hover
+    background-color: $color-blue-1
+    @include opacity(0.88)
+    box-shadow: 0 0 20px #F6C621
+
+
+  &.available.earned
+    @include opacity(0)
+
+  &.awarded.unearned
+    @include opacity(0)
+
+  &.available, &.awarded
+    &.hide-after-fade, &.temp-hide
+      display: none !important
+
+  &.available.unearned-active
+    transition:1s linear all
+    opacity:0.92
+
+  &.awarded.earned-active
+    transition:1.5s linear all
+    box-shadow: 0 0 150px #FFD017
+    opacity:0.95
+
+  &.fade-in-available
+    @include opacity(0.8)
+    @include transition-property("opacity")
+    @include transition-duration(2s)
+    @include transition-timing-function(ease)
+
+  &.fade-in-awarded
+    @include opacity(1)
+    @include transition-property("opacity")
+    @include transition-duration(2s)
+    @include transition-timing-function(ease)
+
+  .ribbon
+    width: 100px
+    position: absolute
+    margin-top: -20px
+    margin-left: -10px
+    text-align: center
+    z-index: 100
+    background: $color-red-1
+    background: -webkit-gradient(linear, left top, left bottom, from(#d64b4b), to(#ab2c2c))
+    background: -webkit-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -moz-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -ms-linear-gradient(top, #d64b4b, #ab2c2c)
+    background: -o-linear-gradient(top, #d64b4b, #ab2c2c)
+    background-image: -ms-linear-gradient(top, #d64b4b 0%, #ab2c2c 100%)
+    -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+
+  /* ends to the red ribbon */
+  .ribbon-ends
+    &:before, &:after
+      content: ''
+      position: absolute
+      display: block
+      bottom: -2em
+      border: 1.1em solid #c23a3a
+      z-index: 1
+    &:before
+      left: -2.5em
+      border-right-width: 1.5em
+      border-left-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px
+    &:after
+      right: -2.5em
+      border-left-width: 1.5em
+      border-right-color: transparent
+      -webkit-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      -moz-box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+      box-shadow: rgba(0, 0, 0, 0.4) -1px 1px 1px
+
+  .ribbon-stitches-top
+    z-index: 2410
+    margin-top: 2px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5)
+
+  .ribbon-stitches-bottom
+    z-index: 2410
+    margin-bottom: 3px
+    border-top: 1px dashed rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3)
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.3)
+
+  .available
+    opacity: .5
+
+  .gold-stars
+    position: absolute
+    top: 10px
+    right: -20px
+    font-size: 2rem
+    color: $color-yellow-1
+    z-index: 100 !important
+
+    i.fa-fw
+      z-index: 600 !important
+
+  &.unearned
+    .gold-stars
+      @include opacity(0.6)
+
+  .badges-earned
+    @include ribbon
+
+.badge-table
   float: left
   position: relative
 
@@ -63,8 +195,6 @@ button#remove-badges, button#add-badges
     @include transition-property("background, opacity")
     @include transition-duration(0.6s)
     @include transition-timing-function(ease)
-    cursor: pointer
-    cursor: hand
     width: 32%
     height: 4%
     z-index: 100
@@ -89,60 +219,6 @@ button#remove-badges, button#add-badges
     &:after
       bottom: -43.0330px
 
-    &.unearned 
-      @include opacity(0.6)
-      background-color: #555
-
-    &.unearned:before, &.unearned:after
-      background-color: $color-grey-3
-
-
-    &.unearned:hover, &.unearned:before:hover, &.unearned:after:hover
-      background-color: $color-blue-1
-      @include opacity(0.88)
-      box-shadow: 0 0 20px #F6C621
-
-    &.available.earned
-      @include opacity(0)
-
-    &.awarded.unearned
-      @include opacity(0)
-
-    &.available, &.awarded
-      &.hide-after-fade, &.temp-hide
-        display: none !important
-
-    &.available.unearned-active
-      transition:1s linear all
-      opacity:0.92
-
-    &.awarded.earned-active
-      transition:1.5s linear all
-      box-shadow: 0 0 150px #FFD017
-      opacity:0.95
-
-    &.fade-in-available
-      @include opacity(0.8)
-      @include transition-property("opacity")
-      @include transition-duration(2s)
-      @include transition-timing-function(ease)
-
-    &.fade-in-awarded
-      @include opacity(1)
-      @include transition-property("opacity")
-      @include transition-duration(2s)
-      @include transition-timing-function(ease)
-
-    span
-      display: block
-      position: absolute
-      top: 0.5773502691896257px
-      left: 0
-      width: 40%
-      height: 30%
-      z-index: 2
-      background: inherit
-
   .ribbon
     width: 120%
     position: absolute
@@ -160,14 +236,6 @@ button#remove-badges, button#add-badges
     -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
     -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
     box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
-    .badge-name
-      font-size: .7rem
-      margin: 0px
-      color: $color-black
-      text-shadow: #d65c5c 0 1px 0
-      padding: 2px 10px
-      font-weight: bold
-      line-height: .9rem
 
   /* ends to the red ribbon */
   .ribbon-ends
@@ -236,3 +304,12 @@ button#remove-badges, button#add-badges
 
   .badges-earned
     @include ribbon
+
+.badge-name
+  font-size: .7rem
+  margin: 0px
+  color: $color-black
+  text-shadow: #d65c5c 0 1px 0
+  padding: 2px 10px
+  font-weight: bold
+  line-height: .9rem
