--- a/app/views/grades/analytics/_individual_analytics.haml
+++ b/app/views/grades/analytics/_individual_analytics.haml
@@ -12,7 +12,7 @@
       %span.small_uppercase High Score:
       = points presenter.assignment.high_score
 
-  - if presenter.scores_for(current_student).count > 1
+  - if presenter.has_scores_for?(current_student)
     %br
     %h4.bold Grade Distribution
     .grades_per_assign{ "data-scores" => presenter.scores_for(current_student).to_json, :style => "width: 200px" }
