--- a/app/views/grades/analytics/_instructor_analytics.haml
+++ b/app/views/grades/analytics/_instructor_analytics.haml
@@ -4,7 +4,7 @@
     %li
       %span.small_uppercase No. of Positive Predictions:
       = points presenter.assignment.predicted_count
-    - if presenter.scores_for(current_user).count > 1
+    - if presenter.has_scores_for?(current_user)
       %li
         %span.small_uppercase Average Score:
         = points presenter.assignment.average
@@ -15,7 +15,7 @@
         %span.small_uppercase High Score:
         = points presenter.assignment.high_score
 
-  - if presenter.scores_for(current_user).count > 1
+  - if presenter.has_scores_for?(current_user)
     %h4.bold Grade Distribution
     .grades_per_assign{ "data-scores" => presenter.scores_for(current_user).to_json, :style => "width: 200px" }
 
