--- a/app/views/assignments/_view_assignment_grades.html.haml
+++ b/app/views/assignments/_view_assignment_grades.html.haml
@@ -26,7 +26,7 @@
     #tabt1.ui-tabs-panel.ui-widget-content{:role => "tabpanel"}
       #tab1.active
         = render partial: 'assignments/description_and_downloads', locals: { presenter: presenter }
-      - if presenter.rubric_available? && presenter.grades_available_for?(current_student)
+      - if presenter.rubric_available? && !presenter.grades_available_for?(current_student)
         #tab2= render partial: 'assignments/rubric_preview', locals: { presenter: presenter }
       - if presenter.has_submission_for?(current_student)
         #tab3= render partial: "submissions/student_show", locals: { presenter: presenter }
