--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -120,6 +120,9 @@ body
 .clear
   clear: both
 
+.no-bullet li
+  list-style-type: none
+
 form .tabs-content .content
   min-height: 400px
   border: 1px solid $color-grey-5
