--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -7,8 +7,8 @@
   .italic= "Opens: #{presenter.assignment.open_at}" if presenter.assignment.open_at?
   .italic= "Due: #{presenter.assignment.due_at}" if presenter.assignment.due_at?
 
-  - if current_student.present? && presenter.assignment.accepts_submissions?
-    = render "students/submissions", assignment: presenter.assignment
+  - if current_student.present? && presenter.assignment.accepts_submissions? &&  presenter.assignment.is_unlocked_for_student?(current_student)
+    .no-bullet= render "students/submissions", assignment: presenter.assignment
 
   - if presenter.student_logged?(current_user)
     = render partial: "assignments/self_log_form", locals: { student: current_student, assignment: presenter.assignment }
