--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -13,11 +13,20 @@
         %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment, team: presenter.team)
       - else
         %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment)
-      / - if presenter.assignment.submissions.present?
-      /   %li
-      /     %a{:href => export_submissions_assignment_path(presenter.assignment, :team_id => presenter.team, format: 'zip') }
-      /       %i.fa.fa-zip-o.fa-fw
-      /       Download Submissions
+
+      // @mz #assignment_export
+      // THIS IS WHERE THE SUBMISSION EXPORT WILL START
+      - if presenter.assignment.submissions.present?
+        %li
+          - if presenter.team
+            %a{:href => export_submissions_assignment_path(presenter.assignment, :team_id => presenter.team, format: 'zip') }
+              %i.fa.fa-zip-o.fa-fw
+                Download Team Submissions
+          - else
+            %a{:href => export_submissions_assignment_path(presenter.assignment, format: 'zip') }
+              %i.fa.fa-zip-o.fa-fw
+                Download Submissions
+
       %li
         %a{:href => import_grades_assignment_path(presenter.assignment) }
           %i.fa.fa-upload.fa-fw
