--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -64,7 +64,7 @@
     %thead
       %tr
         %th Name
-        %th Score
+        %th{ "data-dynatable-sorts" => "numericScore" } Score
         %th{:width => "80px"}
 
     %tbody
