--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -22,7 +22,7 @@
         %th{:scope => "col"} Last Name
         - if current_course.in_team_leaderboard? || current_course.character_names?
           %th Pseudonyms
-        %th{:scope => "col", "data-dynatable-sorts" => "score"} Score
+        %th{:scope => "col", "data-dynatable-sorts" => "numericScore"} Score
         - if current_course.has_teams?
           %th{:scope => "col"} #{current_course.team_term}
         %th{:scope => "col"} Grade
