--- a/app/views/earned_badges/_form.html.haml
+++ b/app/views/earned_badges/_form.html.haml
@@ -1,3 +1,5 @@
+= render partial: 'layouts/alerts', locals: { model: @earned_badge, term: term_for(:badge) }
+
 = simple_form_for([@badge, @earned_badge]) do |f|
   .italic= "You are awarding the #{@badge.name} #{term_for :badge} to..."
 
