--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -22,7 +22,7 @@
 
     .form-item
       = f.label :year
-      = f.select :year, (Date.today.year - 3)..(Date.today.year + 2), :selected => "#{Date.today.year}"
+      = f.select :year, (Date.today.year - 3)..(Date.today.year + 2), :selected => "#{@course.year || Date.today.year}"
 
     .form-item
       = f.label :point_total, "Max Number of Points"
