--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -18,6 +18,9 @@
     .form-item
       = f.label :display_name
       = f.text_field :display_name
+    .form-item
+      = label_tag "um_user", "UM User"
+      = check_box_tag "um_user"
 
   - if current_user_is_admin?
     %section
