--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -19,8 +19,8 @@
       = f.label :display_name
       = f.text_field :display_name
     .form-item
-      = label_tag "um_user", "UM User"
-      = check_box_tag "um_user"
+      = label_tag "internal", "UM User"
+      = check_box_tag "internal"
 
   - if current_user_is_admin?
     %section
