--- a/app/views/students/syllabus/_instructor_table.haml
+++ b/app/views/students/syllabus/_instructor_table.haml
@@ -9,8 +9,8 @@
 %tbody
 - assignments = assignment_type.assignments.includes(:assignment_type, :unlock_conditions)
 - assignments.each do |assignment|
-  - grade_instructor_modified_for_assignment = @student.grade_instructor_modified_for_assignment?(assignment)
   - grade = @student.grade_for_assignment(assignment)
+  - grade_modified = grade.instructor_modified?
   - group = @student.group_for_assignment(assignment)
   - submission = @student.submission_for_assignment(assignment)
   %tr
@@ -22,7 +22,7 @@
     %td
       - if assignment.points_visible_for_student?(@student)
         - if assignment.pass_fail?
-          - if grade_instructor_modified_for_assignment
+          - if grade_modified
             .bold
               - if grade.pass_fail_status
                 = term_for(grade.pass_fail_status)
@@ -33,18 +33,18 @@
           - if assignment_type.student_weightable?
             // Checking to see if this student has weighted this assignment anything other than 1
             - if (@student.weight_for_assignment_type(assignment_type) == 0 && current_course.default_assignment_weight != 1) || @student.weight_for_assignment_type(assignment_type) > 1
-              - if grade_instructor_modified_for_assignment
+              - if grade_modified
                 = "#{points grade.raw_score} / #{ points assignment.point_total } points (Raw)"
                 .bold= "#{ points grade.score } / #{points grade.point_total} points (Multiplied)"
               - else
                 .italic= "#{points grade.point_total} points possible"
             - else
-              - if grade_instructor_modified_for_assignment
+              - if grade_modified
                 .bold= "#{points grade.raw_score} / #{ points grade.point_total } points"
               - else
                 .italic= "#{points assignment.point_total} points possible"
           - else
-            - if grade_instructor_modified_for_assignment
+            - if grade_modified
               .bold
                 = "#{points grade.score} / #{points grade.point_total} points earned"
             - else
@@ -59,7 +59,7 @@
         %ul.button-bar
 
           / Grade Management /
-          - if grade_instructor_modified_for_assignment
+          - if grade_modified
             %li= link_to glyph(:eye) + "See Results", assignment_grade_path(assignment, :student_id => @student.id), :class => "button"
             - if assignment.is_individual?
               %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment.id, :student_id => @student.id), :class => 'button'
