--- a/app/views/exports/index.html.haml
+++ b/app/views/exports/index.html.haml
@@ -47,4 +47,4 @@
               %ul.button-bar
                 - if export.downloadable?
                   %li= link_to glyph(:download) + "Download", download_submissions_export_path(export), :class => 'button', style: "margin-right: 18px"
-                %li= link_to glyph(:trash) + Delete", export, :class => 'button', :data => { confirm: 'This will delete the submissions export. Are you sure?' }, :method => :delete
+                %li= link_to glyph(:trash) + "Delete", export, :class => 'button', :data => { confirm: 'This will delete the submissions export. Are you sure?' }, :method => :delete
