--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -128,9 +128,11 @@ a.outline-button
 @media (max-width: $media-small-max)
   .homepage
     .hero-section
-      height: 225px
+      height: 175px
 
       h1
+        padding: 2rem 0 0
+        margin: 0 auto
         font-size: 1.3rem
         width: 80%
 
@@ -169,7 +171,7 @@ a.outline-button
       padding: 0 0 3rem!important
 
       h2
-        padding-top: 1rem
+        padding: 1rem .25rem 0
 
     .quarter
       width: calc(100% - 2rem) !important
