--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -30,58 +30,7 @@
         - if current_user_is_staff?
           = link_to "(Remove)", remove_uploads_path({ :model => "ChallengeFile", :upload_id => cf.id })
 
-  = form_tag edit_status_challenge_challenge_grades_path @challenge do
-    %table.nofeatures_default_score_dynatable
-      %thead
-        %tr
-          %th= current_course.team_term
-          %th{ "data-dynatable-sorts" => "numericScore" } Score
-          - if @challenge.has_levels?
-            %th Level
-          - if @challenge.release_necessary?
-            %th Status
-          - if current_user_is_staff?
-            %th
-          - if @challenge.release_necessary?
-            %th.center{"data-dynatable-no-sort" => "true" }
-              %button.button.select-all= "Check All"
-              %button.button.select-none= "Uncheck"
-      %tbody
-        - @teams.alpha.each do |team|
-          - challenge_grade = @challenge.challenge_grades.find_by team: team
-          %tr
-            %td
-              - if current_user_is_staff?
-                = link_to team.name, team
-              - else
-                = team.name
-            %td
-              - if challenge_grade
-                = points challenge_grade.score
-            - if @challenge.has_levels?
-              %td
-                - if challenge_grade
-                  = @challenge.grade_level(grade)
-            - if @challenge.release_necessary?
-              %td= challenge_grade.try(:status)
-            - if current_user_is_staff?
-              %td
-                .right
-                  - if challenge_grade
-                    %ul.button-bar
-                      %li= link_to glyph(:eye) + "See Grade", challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'
-                      %li= link_to glyph(:edit) + "Edit Grade", edit_challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button'
-                      %li= link_to glyph(:trash) + "Delete Grade", challenge_challenge_grade_path(@challenge.id, challenge_grade.id, :team_id => team.id), :class => 'button', :data => { confirm: 'Are you sure?', method: :delete }
-                  - else
-                    %ul.button-bar
-                      %li= link_to glyph(:check) + "Grade", new_challenge_challenge_grade_path(:challenge_id => @challenge.id, :team_id => team.id), :class => 'button'
-
-            - if @challenge.release_necessary?
-              %td
-                - if challenge_grade.is_graded?
-                  .center= check_box_tag "challenge_grade_ids[]", challenge_grade.id
-
-    %br
-    .right
-      - if @challenge.release_necessary? && @challenge.challenge_grades.present?
-        = submit_tag "Update Grade Statuses", :class => "button"
+  - if current_user_is_staff?
+    = render "show_instructor"
+  - else
+    = render "show_student"
