--- a/app/views/challenges/_staff_index.haml
+++ b/app/views/challenges/_staff_index.haml
@@ -16,7 +16,7 @@
       %tr
         %td= link_to challenge.name, challenge
         %td= raw challenge.description
-        %td= challenge.point_total
+        %td= points challenge.point_total
         %td= challenge.due_at
         %td{:style => "display: none"}
           = challenge.try(:due_at).to_formatted_s(:db) if challenge.due_at.present?
