disable rubric submissions without grade status
	This pull request cancels sumbission from the rubric grade form if a
        grade status has not been selected.  It issues an alert box instead.
	Minimal style change to align the selector with it's info text and
	submit button. Fixes #1669

--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -80,18 +80,16 @@
     .summary_feedback
       %textarea(ng-model="grade.feedback" froala="froalaSummaryOptions")
     .clear
-
-      .right
-      .row
-        - if !@assignment.release_necessary?
-          %select(ng-model="grade.status" ng-options="status for status in noReleaseGradeStatuses")
-            %option(value="" disabled) Select grade status for this submission...
-          .form_label Is this grade ready to be reviewed?
-        - else
-          %select(ng-model="grade.status" ng-options="status for status in releaseNecessaryGradeStatuses")
-            %option(value="" disabled) Select grade status for this submission...
-          .align-right.form_label Can the student see this grade?
+    .right
+      - if !@assignment.release_necessary?
+        %select(ng-model="grade.status" ng-options="status for status in noReleaseGradeStatuses")
+          %option(value="" disabled) Select grade status for this submission...
+        .form_label Is this grade ready to be reviewed?
+      - else
+        %select(ng-model="grade.status" ng-options="status for status in releaseNecessaryGradeStatuses")
+          %option(value="" disabled) Select grade status for this submission...
+        .align-right.form_label Can the student see this grade?
 
     .clear
     .right
-      %button#submit-grade(ng-click="submitGrade()") Submit Grade
+      %button#submit-grade(ng-click="submitGrade()" ng-class='{"disabled" : !grade.status}') Submit Grade
